--- a/Lista de tareas/listaTareas.html
+++ b/Lista de tareas/listaTareas.html
@@ -1,6 +1,12 @@
 <html>
 <h1 style="color: white;"><center>Lista de tareas</center></h1>
+
 <link rel="stylesheet" href="/style.css">
+<body>
+    
+    <input style="color: black;" type="boton">
+    <input type="button" value="boton">
+</body>
 <ol>
     <a  style="color: white;" href="https://www.youtube.com/results?search_query=never+gonna+give+you+up">boton</a>
     <li>
